2006-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/connections.py:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/parts.py:
	* flumotion/admin/gtk/spyglass.py:
	* flumotion/admin/gtk/videotest.py:
	* flumotion/admin/gtk/wizard.py:
	* flumotion/common/Makefile.am:
	* flumotion/common/compat.py:
	* flumotion/common/pygobject.py:
	* flumotion/component/component.py:
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/preview/preview.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/feedcomponent08.py:
	* flumotion/test/test_common_pygobject.py:
	* flumotion/tester/httpclient.py:
	* flumotion/ui/fgtk.py:
	* flumotion/ui/glade.py:
	* flumotion/wizard/sidebar.py:
	* flumotion/wizard/wizard.py:
	* flumotion/wizard/worker.py:
	  fold flumotion.common.compat into flumotion.common.pygobject

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  instead of taking the master clock's loopback ip,
	  fix up the master clock host to be "the manager's IP
	  as seen from the slave".  Solves the netclock sync
	  problem in the case where the clock master is on the
	  manager host. 
	  FIXME: of course this should require proper fixing.

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	* flumotion/manager/base.py:
	* flumotion/manager/component.py:
	  document IP-related methods more so that they're clear

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent.py:
	* flumotion/manager/component.py:
	  do some more debugging on the master clock master stuff
	  make the clockMasterWaiters hash take tuples so we can
	  log which avatarId was waiting
